2007-05-07  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: if the parser's language is implicit (i.e. set
	from the default configuration), the first script with the
	language attribute present sets the language of the parser.

2007-05-04  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: do not query the parent for
	TemplateSourceDirectory if we are generating code for a Master
	Page.

2007-04-30  Marek Habersack  <mhabersack@novell.com>

	* ConnectionStringsExpressionBuilder.cs: support expressions with
	suffixes .ProviderName and .ConnectionString (case-insensitie) and
	generate a call to GetConnectionStringProviderName in the former
	case. Fixes bug #81490

	* AppCodeCompiler.cs: support for cases when there exists a custom
	profile class but there is no App_Code directory or it's
	empty. Fixes bug #81489. 

	* TemplateControlCompiler.cs: fix generation of code for
	declarative attribute assignments of the form Font-Size="small"
	(i.e. when a font size is assigned a symbolic, relative size
	value). This fixes for example rendering of the 0th level of
	TreeView controls.

2007-04-27  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: do not look at the number of errors, check
	the compiler return code instead.
	Resolve assembly names from the global web.config to their
	locations before passing them to the compiler provider.

	* AssemblyBuilder.cs: as above

	* AppResourcesCompiler.cs: as above
	
	* AspComponentFoundry.cs: formatting changes.
	AssemblyFoundry looks for the specified namespace+type in the
	top-level assemblies if necessary.

2007-04-26  Marek Habersack  <mhabersack@novell.com>

	* AssemblyBuilder.cs: handle compilation failures in a better
	way.

	* PageCompiler.cs: the Master property must be in the partial
	class if present. Fixes bug #81442

2007-04-20  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: fix App_Code build when the directory